Add dice images, css backbone, html backbone.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,31 @@
     <title>Tai's Site</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
-  
 
-    <script src="assets/js/index.js" charset="UTF-8"></script>
+<body>
+
+    <div class="container">
+        <h1>Refresh Me</h1>
+
+        <div class="dice">
+            <p>Player 1</p>
+            <img class="dice-one" src="assets/images/dice6.png">
+        </div>
+
+        <div class="dice">
+            <p>Player 2</p>
+            <img class="dice-two" src="assets/images/dice6.png">
+        </div>
+
+    </div>
+
 </body>
+
+<footer>
+    🎲 The Dicee 🎲
+</footer>
+
+<script src="assets/js/index.js" charset="UTF-8"></script>
+</body>
+
 </html>
