--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tai's Site</title>
+    <link rel="icon" href="assets/images/burger-favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
